# umoqnier.github.io

./: README.md  pelicanconf.py  pyproject.toml
al_folio_theme/templates/: about.html  index.html
al_folio_theme/templates/_includes/: footer.html
al_folio_theme/templates/scripts/: mathjax.html
content/: config.yml
content/data/: cv.yml  talks.yml  venues.yml
content/pages/: cv.md  home.md  news.md  projects.md  publications.bib  publications.md  talks.md  teaching.md
content/posts/: a_star.md  imitation_game.md  initial_commit.md
content/projects/: esquite.md  pyelotl.md
py_code/: al_folio_extension.py
