[project]
name = "cv-page"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cssmin>=0.2.0",
    "invoke>=2.2.0",
    "libsass>=0.23.0",
    "livereload>=2.7.1",
    "markdown>=3.8.2",
    "pelican>=4.11.0",
    "pelican-sitemap>=1.2.1",
    "pelican-webassets>=2.1.0",
    "pybtex>=0.25.1",
    "pygments>=2.18.0",
    "rjsmin>=1.2.4",
]
